--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "set PORT = 5173",
-    "dev": "vite set PORT = 5173",
+    "dev": "vite --PORT 5500",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
